Add presnetation test

--- a/FLISoL-2015/demo/flisol-polymer/demo.html
+++ b/FLISoL-2015/demo/flisol-polymer/demo.html
@@ -6,9 +6,11 @@
     <title>flisol-polymer Demo</title>
     <script src="../webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="flisol-polymer.html">
+    <link rel="import" href="test-lab.html">
   </head>
   <body unresolved>
     <p>An `flisol-polymer` looks like this:</p>
-    <flisol-polymer></flisol-polymer>
+    <flisol-polymer author="Jimmy Saenz"></flisol-polymer>
+    <test-lab asistentes="20"></test-lab>
   </body>
 </html>
