--- a/FLISoL-2015/demo/flisol-polymer/flisol-polymer.html
+++ b/FLISoL-2015/demo/flisol-polymer/flisol-polymer.html
@@ -16,7 +16,7 @@ Element providing solution to no problem in particular.
   <template>
     <link rel="stylesheet" href="flisol-polymer.css">
     <h1>Hello from flisol-polymer</h1>
-    <content></content>
+    <content><p>{{ author }}</p></content>
   </template>
   <script>
     Polymer({
